--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,4 +1,4 @@
 <footer class="footer">
   <div><%= config.description %></div>
-  <div>由<a href="https://hexo.io/">Hexo</a>强力驱动 | 主题- <a href="https://github.com/wszgxa/hexo-theme-simple">Simple</a></div>
+  <div><%= __('footer.by') %> <a href="https://hexo.io/">Hexo</a> <%= __('footer.drive') %> | <%= __('footer.theme') %>- <a href="https://github.com/wszgxa/hexo-theme-simple">Simple</a></div>
 </footer>
