--- a/layout/_partial/categories.ejs
+++ b/layout/_partial/categories.ejs
@@ -1,4 +1,4 @@
-<div class="cate-head">目前共计<%= site.categories.length %>个分类</div>
+<div class="cate-head"><%= __('categories.front') %><%= site.categories.length %><%= __('categories.back')%></div>
 <%- list_categories({
   show_count: true,
   class: 'cate'
