--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,12 +1,12 @@
 <section class="archives-wrap">
   <% if (page.category) { %>
     <div class="ct-title">
-      <h2><%= page.category %> <small>分类</small></h2>
+      <h2><%= page.category %> <small><%= __('menu.categories') %></small></h2>
     </div>
   <% } %>
   <% if (page.tag) { %>
     <div class="ct-title">
-      <h2><%= page.tag %>  <small>标签</small></h2>
+      <h2><%= page.tag %>  <small><%= __('meun.tags') %></small></h2>
     </div>
   <% } %>
   <% page.posts.each(function(post, i){ %>
