--- a/layout/_partial/tags.ejs
+++ b/layout/_partial/tags.ejs
@@ -1,4 +1,4 @@
-<div class="cate-head"><%= __('tags.front') %><%= site.tags.length %><%= __('tags.back') %></div>
+<div class="cate-head"><%= __('tags.title', site.tags.length) %></div>
 <div class="tags-cloud">
 <%- tagcloud({
   min_font: 18,
