--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -1,5 +1,5 @@
 .footer
-  max-width 800px
+  max-width content-total-width
   margin 10px auto 0
   text-align center
   background-color color-white
