--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -1,5 +1,5 @@
 .header
-  max-width 800px
+  max-width content-total-width
   margin 0 auto 20px
   text-align center
   background-color color-white
