--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -27,3 +27,6 @@ side-time = 300ms
 hover-time = 200ms
 // layout
 side-width = 210px
+content-width = 760px
+content-pd-lr = 40px
+content-total-width = (content-width + content-pd-lr * 2)
