--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -31,9 +31,9 @@
         <% } else { %>
           <%- post.content %>
         <% } %>
-      </div>
-      <div class='read-more'>
-        <a href="<%- url_for(post.path) %>"><span class='i-next'>阅读全文</span></a>
+        <div class='read-more'>
+          <a href="<%- url_for(post.path) %>"><span class='i-next'><%= __('read_more') %></span></a>
+        </div>
       </div>
     </div>
   <% }) %>
