--- a/source/css/_partial/content.styl
+++ b/source/css/_partial/content.styl
@@ -1,9 +1,9 @@
 
 .content
-  max-width 760px
+  max-width content-width
   min-height 768px
   margin 0 auto
-  padding 20px
+  padding 20px content-pd-lr
   background-color #FFF
   box-shadow 0px 1px 3px color-hover   
 .archives
@@ -13,7 +13,7 @@
     padding-bottom 10px
     border-bottom 1px solid color-border
     h1
-      font-size 1.85em
+      font-size 1.80em
       color color-header-font
     .post-title
       position relative
