--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -12,7 +12,7 @@
     <%- partial('_partial/sidebar', null, {cache: !config.relative_link}) %>
     <div class="wrap">
       <%- partial('_partial/side') %>
-      <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
+      <%- partial('_partial/header') %>
       <section id="main" class="content">
         <%- body %>
       </section>
