--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -6,7 +6,7 @@
   <% } %>
   <% if (page.tag) { %>
     <div class="ct-title">
-      <h2><%= page.tag %>  <small><%= __('meun.tags') %></small></h2>
+      <h2><%= page.tag %>  <small><%= __('menu.tags') %></small></h2>
     </div>
   <% } %>
   <% page.posts.each(function(post, i){ %>
