--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -5,7 +5,7 @@
     var title = page.title;
     var subtitle = page.subtitle
     if (is_archive()){
-      title = __('archive_a');
+      title = __('title.archive');
 
       if (is_month()){
         title += ': ' + page.year + '/' + page.month;
@@ -13,9 +13,9 @@
         title += ': ' + page.year;
       }
     } else if (is_category()){
-      title = __('category') + ': ' + page.category;
+      title = __('title.category') + ': ' + page.category;
     } else if (is_tag()){
-      title = __('tag') + ': ' + page.tag;
+      title = __('title.tag') + ': ' + page.tag;
     }
     %>
     <title>
