--- a/layout/_script/comments/disqus.ejs
+++ b/layout/_script/comments/disqus.ejs
@@ -1,3 +1,4 @@
+<% if (theme.disqus_shortname) { %>
 <script type="text/javascript">
   var disqus_shortname = '<%= theme.disqus_shortname %>';
   var disqus_identifier = '<%= page.path %>';
@@ -19,3 +20,4 @@
   <% } %>
   
 </script>
+<% } %>
