--- a/layout/_script/comments/duoshuo.ejs
+++ b/layout/_script/comments/duoshuo.ejs
@@ -1,3 +1,4 @@
+<% if (theme.duoshuo_shortname) { %>
 <script type="text/javascript">
   var duoshuoQuery = {short_name:"<%= theme.duoshuo_shortname %>"};
 	(function() {
@@ -9,3 +10,4 @@
 		 || document.getElementsByTagName('body')[0]).appendChild(ds);
 	})();
 </script>
+<% } %>
