add 响应式 加特效

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -19,7 +19,7 @@
     <%- partial('_partial/footer') %>
     </div>
   </div>
-  <%- js('js/simple_dev') %>
+  <%- js('js/simple_build') %>
   <%- partial('_script/comments.ejs') %>
   <%- partial('_script/analytics.ejs') %>
 </body>
