--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -1,10 +1,10 @@
 .footer
-  max-width content-total-width
+  max-width content-width
   margin 10px auto 0
   text-align center
   background-color color-white
   box-shadow 0 0 5px color-hover
-  padding 10px 0
+  padding 10px content-pd-lr
   a
     color color-href
     &:hover
