--- a/source/css/_util/responsive.styl
+++ b/source/css/_util/responsive.styl
@@ -1,7 +1,14 @@
 // 适应手机小屏幕
 
-@media screen and (max-width: 875px) 
+@media screen and (max-width: 800px) 
   .side
     display none
   .content
     padding 20px
+  .footer, .header
+    max-width (content-width + 40px)
+  .page-nav
+    .page-number
+      width 25px
+      height 25px
+      line-height 25px
