--- a/source/css/_partial/content.styl
+++ b/source/css/_partial/content.styl
@@ -8,6 +8,7 @@
   box-shadow 0px 1px 3px color-hover   
 .archives
   margin-bottom 50px
+  animation flow 530ms ease-in-out
   .title-wrap
     margin 20px 0
     padding-bottom 10px
